--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ anyhow = "1.0"
 image = {version = "0.24.5", default-features = false, features = ["png"]}
 regex = "1.7"
 warp = "0.3"
-shuttle-service = { version = "0.7.2", features = ["web-warp"] }
+shuttle-service = { version = "^0.7", features = ["web-warp"] }
 log = "0.4"
 
 [dev-dependencies]
