--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,5 +13,7 @@ anyhow = "1.0"
 image = {version = "0.24.5", default-features = false, features = ["png"]}
 regex = "1.7"
 warp = "0.3"
-shuttle-service = { version = "^0.7", features = ["web-warp"] }
+shuttle-runtime = { version = "0.13" }
+shuttle-warp = { version = "0.13" }
+tokio = { version = "1.26.0" }
 log = "0.4"
