--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 reqwest = {version = "0.11", features = ["json"]}
 anyhow = "1.0"
+thiserror = "1.0.40"
 image = {version = "0.24.5", default-features = false, features = ["png"]}
 regex = "1.7"
 warp = "0.3"
